--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.4.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.5",
+    "react-webcam": "^7.2.0",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.4"
   },
